pipeplineBuilder version 6 COMPLETE ALPHA

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,9 +56,11 @@
 		"Behavioural",
 		"Gameday",
 		"Healthcheck",
+		"materialisation",
 		"materialise",
 		"materialised",
 		"materialises",
+		"Normalise",
 		"Normalises",
 		"normalising",
 		"sgos",
