--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
 		"Behavioural",
 		"Gameday",
 		"Healthcheck",
+		"keymoment",
+		"keymoments",
 		"materialisation",
 		"materialise",
 		"materialised",
@@ -64,6 +66,8 @@
 		"Normalises",
 		"normalising",
 		"sgos",
+		"sportsperson",
+		"sportspersons",
 		"upserting",
 		"upserts"
 	],
