Updated example .env to use SERVICE_NAME

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ MONGOURL="<connection string>"
 MONGODB="gameday"
 ACCESS_CONTROL_ALLOW_ORIGIN="*"
 APIKEY="<apikey>"
+SERVICE_NAME="gameday-cross-collection-aggregations-poc"
