--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "A proof of concept for cross collection aggregations in Gameday.",
 	"main": "src/index.js",
 	"scripts": {
-		"start": "node src/index.js"
+		"start": "node src/index.js",
+		"test": "jest"
 	},
 	"dependencies": {
 		"axios": "^1.12.2",
@@ -16,5 +17,8 @@
 		"mongodb": "^6.20.0",
 		"uuid": "^13.0.0"
 	},
-	"author": "Andrew Pearce"
+	"author": "Andrew Pearce",
+	"devDependencies": {
+		"jest": "^30.2.0"
+	}
 }
